Collaboratos page spacing between image and text fixed.

--- a/css/arquideas-style.css
+++ b/css/arquideas-style.css
@@ -7040,8 +7040,7 @@ body.node-type-inscription-1 #breadcrumbs {
 
 .colaborator-top img {
   padding: 0 !important;
-  margin-bottom: 20px;
-  margin-right: 40px;
+  margin-right: 20px;
   float: left;
 }
 
